--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ nav a{
     display: block;
     font-size: 20px;
     color: black;
+    font-weight: bold;
     text-decoration: none;
 }
 .modal{
