--- a/css/style.css
+++ b/css/style.css
@@ -102,21 +102,21 @@ button{
     padding: 20px;
 }
 
-.email{
-    padding: 15px;
-}
-
 input{
     margin: 5px;
     padding: 5px;
 }
 
 .advisor{
-    padding-top: 20px;
+    padding: 10px;
 }
 
 .icons{
     padding: 20px;
+}
+
+.contact-info{
+    padding: 10px;
 }
 
 
