add content to admission

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,11 @@ button{
     background-color: #F66565;
 }
 
+.adm-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .contact{
     display: grid;
     grid-template-columns: 1fr 1fr;
