--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-  font-family: Verdana;
+  font-family: Nirmala UI;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
@@ -7,24 +7,37 @@
 div{
     overflow-y: hidden;
 }
+.logo-front{
+    margin: 10px;
+    padding: 50px;
+    background-image: url(/img/kea-logo_3.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 nav{
     position: fixed;
     display: block;
-    top:0;
-    right: 0;
-    height: 100vh;
-    background-color: #F66565;
+    top:30%;
+    left: 0;
+    height: 60vh;
+    background-color: white;
 
 }
 nav a{
-    padding: 25px;
-    padding-right: 47px;
-    padding-left: 30px;
+    padding: 15px;
+    padding-right: 30px;
+    padding-left: 25px;
     display: block;
     font-size: 20px;
     color: black;
     font-weight: bold;
     text-decoration: none;
+}
+
+.intro-square{
+    padding: 50px;
+    right: 10%;
+    background-color: #FDEAEA;
 }
 
 .study-program{
@@ -169,14 +182,13 @@ button{
     display: none;
 }
 
-.contact{
+.contact-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-right: 250px;
 }
 
 .contact-title{
-    grid-column: 1/-1;
     text-align: left;
     padding: 20px;
     padding-top: 30px;
@@ -184,7 +196,6 @@ button{
 }
 
 .contact-more{
-    grid-column: 1/-1;
     padding: 20px;
     text-align: left;
 }
