--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ div{
     overflow-y: hidden;
 }
 .logo-front{
-    margin: 10px;
+    margin: 5px;
     padding: 50px;
     background-image: url(/img/kea-logo_3.jpg);
     background-size: contain;
@@ -17,7 +17,7 @@ div{
 nav{
     position: fixed;
     display: block;
-    top:30%;
+    top:38%;
     left: 0;
     height: 60vh;
     background-color: white;
@@ -30,36 +30,78 @@ nav a{
     display: block;
     font-size: 20px;
     color: black;
-    font-weight: bold;
+    font-weight: 500;
+    text-transform: capitalize;
     text-decoration: none;
 }
 
-.intro-square{
-    padding: 50px;
-    right: 10%;
+.front-square{
+    position: fixed;
+    top: 0;
+    right: 7vw;
+    width: 70vw;
+    height: 100vh;
     background-color: #FDEAEA;
 }
 
-.study-program{
-    padding-right: 300px;
+.title{
+    padding: 30px;
+    padding-top: 20px;
+    font-weight: 500;
+    font-size: 90px;
 }
-.study-title-1{
-    text-align: left;
+
+.img-header{
+  position: relative;
+   margin-left: 150px;
+   padding: 60px;
+   width: 100vw;
+   height: 9vh;
+   background-size: contain;
+   background-repeat: no-repeat; 
+}
+
+.img-intro{
+    background-image: url(/img/red-headers/red-introduction.png);
+}
+
+.title-section{
+    position: relative;
+    margin: 0;
+    padding-left: 100px;
+   font-size: 40px; 
+    font-weight: 400;
+}
+
+.intro-container{
+    margin-left: 190px;
+    padding: 40px;
+}
+
+.intro-container p{
+    padding: 10px;
+}
+
+.img-program{
+    background-image: url(/img/red-headers/red-study-program.png);
+}
+
+.study-container{
     padding: 20px;
-    padding-top: 30px;
-    font-size: 50px;
+    padding-left: 190px;
 }
 
 .study-content{
     padding: 50px;
     padding-left: 100px;
+    padding-right: 100px;
     text-align: center;
 }
 
 .study-title-2{
     padding: 10px;
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
 }
 
 .cores{
@@ -87,19 +129,19 @@ nav a{
     padding: 18px;
     grid-column: 1/-1;
     font-size: 20px;
-    background-color: #FF81AF;
+    background-color: #DCD9D9;
 }
 
 .semester{
     padding: 12px;
     font-size: 15px;
-    background-color: #F5CAD1;
+    background-color: #DCD9D9;
 }
 
 .project{
     padding: 40px 10px 40px 10px;
     font-size 12px;
-    background-color: #F8ECEC;
+    background-color: #A79E9E;
 }
 
 .modal{
