add margin and try to put json

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
   font-family: Nirmala UI;
     overflow-x: hidden;
     margin: 0;
+    margin-left: 40px;
+    margin-right: 40px;
     padding: 0;
 }
 div{
