--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,24 @@
 *{
   font-family: Nirmala UI;
     overflow-x: hidden;
-    margin: 0;
+}
+
+body{
+     margin: 0;
     margin-left: 40px;
     margin-right: 40px;
     padding: 0;
 }
+
 div{
     overflow-y: hidden;
 }
 
 /* navigation */
 .logo-front{
+    position: fixed;
     margin: 5px;
-    padding: 50px;
+    padding: 90px;
     background-image: url(../img/kea-logo_3.jpg);
     background-size: contain;
     background-repeat: no-repeat;
@@ -70,9 +75,12 @@ nav a{
 
 /* global size for section images */
 .img-header{
-  position: relative;
-   margin-left: 150px;
-   padding: 60px;
+display: grid;
+    grid-column: 1/-1;
+   position: relative;
+    margin-top: 90px;
+    margin-left: 190px;
+    padding: 70px;
    width: 100vw;
    height: 9vh;
    background-size: contain;
