--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 /* DESKTOP FIRST */
 
-*{
-    font-family: Nirmala UI;
+* {
+    font-family: Nirmala UI, Helvetica, arial, sans-serif;
     overflow-x: hidden;
 }
 
-body{
-     margin: 0;
+body {
+    margin: 0;
     margin-left: 40px;
     margin-right: 40px;
     padding: 0;
 }
 
 
-div{
+div {
     overflow-y: hidden;
 }
 
@@ -84,20 +84,23 @@ nav a {
     padding: 30px;
     padding-top: 20px;
     font-weight: 500;
-    font-size: 90px;
+    font-size: 50px;
+    font-family: "acier-bat-noir", 'Bungee Shade', 'Bungee';
+    letter-spacing: 5px;
 }
 
 /* global size for section images */
+
 .img-header {
     position: relative;
     margin-top: 90px;
     margin-left: 190px;
     padding: 70px;
-   width: 100vw;
-   height: 9vh;
-   background-size: contain;
-   background-repeat: no-repeat; 
->>>>>>> 0d3cd7914a74e5126df05aafcc2f3f8d5ca93374
+    width: 100vw;
+    height: 9vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    > > > > > > > 0d3cd7914a74e5126df05aafcc2f3f8d5ca93374
 }
 
 .img-intro {
@@ -110,8 +113,9 @@ nav a {
     position: relative;
     margin: 0;
     padding-left: 100px;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 400;
+    font-family: 'Bungee';
 }
 
 /* introduction */
@@ -122,7 +126,7 @@ nav a {
 }
 
 .intro-container h2 {
-    color: gray;
+    color: #000000;
 }
 
 .intro-container p {
