--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,8 @@ button {
 /* career */
 
 .title-career-container {
+    margin-top: 110px;
+    margin-left: 190px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -443,19 +445,12 @@ button {
 }
 
 .career-container {
-    padding: 20px;
-    padding-left: 190px;
-}
-
-.subtitle-career {
-    padding: 30px 100px 30px 100px;
-    font-size: 40px;
-    font-weight: 600;
-    color: gray;
+    margin-left: 190px;
+    padding: 20px 110px 20px 45px;
 }
 
 .career-container p {
-    padding: 20px 100px 20px 100px;
+    padding: 10px 60px 10px 60px;
 }
 
 /* contact */
