--- a/css/style.css
+++ b/css/style.css
@@ -124,10 +124,9 @@ nav a {
 /* global size for subtitles section */
 
 .sub-section {
-    font-size: 35px;
     padding-left: 60px;
     font-weight: 600;
-    color: gray;
+    color: black;
 }
 
 /* introduction */
@@ -139,7 +138,7 @@ nav a {
 
 .intro-container h2 {
     padding-left: 60px;
-    color: gray;
+    color: black;
 }
 
 .intro-container p {
@@ -308,7 +307,7 @@ button {
 .adm-elem9,
 .adm-elem10 {
     margin: 5px;
-    padding: 10px;
+    padding: 15px;
     background-color: #DCD9D9;
 }
 
@@ -324,6 +323,7 @@ button {
 .adm-elem10:hover {
     color: white;
     background-color: black;
+    cursor: pointer;
 }
 
 .change-color {
