--- a/css/style.css
+++ b/css/style.css
@@ -212,39 +212,69 @@ nav a {
 /* modals in study program */
 
 .modal {
-    /*position: fixed;*/
+    position: fixed;
     padding-top: 10vh;
     width: 100vw;
     height: 100vh;
     top: 0;
     left: 0;
     overflow: auto;
-    background: #DCD9D9;
+    background: rgba(0,0,0,0.8);
 }
 
 .modal-content {
+    position: relative;
     margin: auto;
-    padding: 15px;
+    padding: 10px;
     width: 60vw;
     height: 60vh;
-    background-color: #F8ECEC;
+    background-color: white;
     overflow: scroll;
     overflow-x: hidden;
 }
 
+.modal-content::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.modal-content::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+.modal-content::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
 .modal-title {
-    padding: 30px;
+    padding: 20px;
     font-size: 30px;
     text-align: center;
 }
 
 .ects-points {
-    padding: 20px;
+    padding: 15px;
     font-size: 15px;
 }
 
+.close{
+    position: absolute;
+    padding: 15px;
+    top: 5%;
+    right: 3%;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-image: url(/img/close-button.svg)
+}
+
 .description {
-    padding: 20px;
+    padding: 30px;
 }
 
 .list-internship {
@@ -482,7 +512,7 @@ input {
 
 .advisor {
     padding: 10px;
-    padding-top: 30px;
+    padding-top: 20px;
 }
 
 .contact-info {
