--- a/css/style.css
+++ b/css/style.css
@@ -214,11 +214,16 @@ nav a {
     background-color: #A79E9E;
 }
 
-#mmd1-btn:hover, #mmd2-btn:hover, #mmd3-btn:hover,
-#intern-btn:hover, #elect-btn:hover, #final-btn:hover{
-    color:white;
+#mmd1-btn:hover,
+#mmd2-btn:hover,
+#mmd3-btn:hover,
+#intern-btn:hover,
+#elect-btn:hover,
+#final-btn:hover {
+    color: white;
     background-color: black;
     transition: all 1.5s;
+    cursor: pointer;
 }
 
 
@@ -232,7 +237,7 @@ nav a {
     top: 0;
     left: 0;
     overflow: auto;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .modal-content {
@@ -246,23 +251,21 @@ nav a {
     overflow-x: hidden;
 }
 
-.modal-content::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+.modal-content::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
 }
 
-.modal-content::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #F5F5F5;
+.modal-content::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
 }
-.modal-content::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+
+.modal-content::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
 
 .modal-title {
@@ -276,7 +279,7 @@ nav a {
     font-size: 15px;
 }
 
-.close{
+.close {
     position: absolute;
     padding: 15px;
     top: 5%;
