--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,26 @@
     overflow-x: hidden;
 }
 
+.layout {
+    max-width: 700px;
+    min-width: 100px;
+    margin: 10px auto 10px auto;
+    border: none;
+    background-color: #ffffff;
+    padding-top: 11em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 2em;
+}
+
+.layout img {
+    max-width: 200px;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+}
+
 body {
     margin: 0;
     margin-left: 60px;
@@ -65,6 +85,7 @@ nav a {
 #adm-nav:hover,
 #abroad-nav:hover,
 #student-nav:hover,
+#top-nav:hover,
 #career-nav:hover,
 #contact-nav:hover {
     color: white;
@@ -468,6 +489,40 @@ button {
     padding: 15px 55px 15px 60px;
 }
 
+/* top up */
+
+.title-top-container {
+    margin-top: 110px;
+    margin-left: 190px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.title-top {
+    position: relative;
+    margin: 0;
+    padding: 10px;
+    padding-left: 100px;
+    font-size: 50px;
+    font-weight: 400;
+}
+
+.img-top {
+    padding: 80px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url(../img/balloon.png)
+}
+
+.top-container {
+    margin-left: 190px;
+    padding: 20px 110px 20px 45px;
+}
+
+.top-container p {
+    padding: 10px 60px 10px 60px;
+}
+
 /* career */
 
 .title-career-container {
@@ -529,7 +584,8 @@ button {
 }
 
 .icons {
-    padding: 30px;
+    padding: 5px;
+    text-align: center;
 }
 
 .icons img {
