--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* DESKTOP FIRST */
 
 * {
-    font-family: arial, Nirmala UI, Helvetica, arial, sans-serif;
+    font-family: Helvetica, arial, sans-serif;
     overflow-x: hidden;
 }
 
@@ -48,16 +48,18 @@ nav a {
     text-transform: capitalize;
     text-decoration: none;
     text-transform: uppercase;
-    font-family: sans-serif;
+    font-family: 'lato', sans-serif;
 }
 
 .nav-title {
-    font-size: 70px;
+    font-size: 50px;
     text-transform: capitalize;
     font-weight: 400;
     text-align: center;
     color: #140D0D;
-    font-family: 'Archivo Black', 'Bungee Shade', 'Bungee', sans-serif;
+    font-family: 'Lato', sans-serif;
+    text-shadow: 2px 2px #f4e0fc;
+
 }
 
 #intro-nav:hover,
@@ -85,7 +87,6 @@ nav a {
     right: 7vw;
     width: 70vw;
     height: 100vh;
-    background-color: #da291c;
 }
 
 .title {
@@ -93,7 +94,9 @@ nav a {
     padding-top: 20px;
     font-weight: 500;
     font-size: 50px;
-    font-family: 'Archivo Black', 'Bungee Shade', 'Bungee', sans-serif;
+   /* font-family: 'Archivo Black', 'Bungee Shade', 'Bungee', sans-serif;*/
+    font-family: 'Lato', sans-serif;
+    text-shadow: 2px 2px #ffffff;
     letter-spacing: 5px;
 }
 
@@ -128,8 +131,10 @@ nav a {
     padding-left: 125px;
     font-size: 40px;
     font-weight: 400;
-    font-family: 'Archivo Black', sans-serif;
-    color: black;
+    font-family: 'Montserrat Subrayada', sans-serif;
+    text-shadow: 2px 2px #fff000;
+
+
 }
 
 /* global size for subtitles section */
