--- a/css/style.css
+++ b/css/style.css
@@ -279,14 +279,15 @@ nav a {
 }
 
 .modal-title {
-    padding: 20px;
-    font-size: 30px;
+    padding: 0;
+    font-size: 40px;
     text-align: center;
 }
 
 .ects-points {
-    padding: 15px;
+    padding: 0;
     font-size: 15px;
+    text-align: center;
 }
 
 .close {
@@ -300,7 +301,19 @@ nav a {
 }
 
 .description {
-    padding: 30px;
+    padding: 20px 50px 20px 50px;
+}
+
+.knowledge, .skills, .competencies{
+    padding: 20px 50px 20px 50px;
+}
+
+.knowledge li, .skills li, .competencies li{
+    padding: 5px;
+}
+
+.cat-title{
+    font-weight: bold;
 }
 
 .list-internship {
