--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
 /* DESKTOP FIRST */
 
+/* GLOBAL SETTINGS */
+
 * {
-    font-family: Helvetica, arial, sans-serif;
+    font-family: 'Open Sans', arial, sans-serif;
     overflow-x: hidden;
+}
+
+body {
+    margin: 0;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 0;
 }
 
 .layout {
@@ -11,25 +20,39 @@
     margin: 10px auto 10px auto;
     border: none;
     background-color: #ffffff;
-    padding-top: 11em;
+    padding-top: 12em;
     padding-left: 1em;
     padding-right: 1em;
     padding-bottom: 2em;
 }
 
-.layout img {
-    max-width: 200px;
-    padding-left: 2em;
-    padding-right: 2em;
+.center-img {
+    text-align: center;
 }
 
+.circle {
+    max-width: 130px;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
-body {
+.student-life-img {
+    max-width: 300px;
+    padding: 1em;
+}
+
+.study-abroad-img {
+    max-width: 300px;
+    padding: 1em;
+}
+
+h1 {
+    position: relative;
     margin: 0;
-    margin-left: 60px;
-    margin-right: 60px;
-    padding: 0;
+    font-size: 35px;
+    font-family: 'Lato', 'Montserrat Subrayada', sans-serif;
+    text-shadow: 4px 4px #f4e0fc;
+
 }
 
 div {
@@ -91,8 +114,8 @@ nav a {
 #career-nav:hover,
 #contact-nav:hover {
     color: white;
-    background-color: black;
-    transition: all 1.5s;
+    background-color: #f4e0fc;
+    transition: all 1s;
 }
 
 .active-color {
@@ -115,7 +138,7 @@ nav a {
     padding-top: 20px;
     font-weight: 500;
     font-size: 50px;
-   /* font-family: 'Archivo Black', 'Bungee Shade', 'Bungee', sans-serif;*/
+    /* font-family: 'Archivo Black', 'Bungee Shade', 'Bungee', sans-serif;*/
     font-family: 'Lato', sans-serif;
     text-shadow: 2px 2px #ffffff;
     letter-spacing: 5px;
@@ -138,25 +161,6 @@ nav a {
     background-repeat: no-repeat;
 }
 
-/*.img-intro {
-    background-image: url(../img/red-headers/red-introduction.png);
-}*/
-
-/* global size for section titles */
-
-.title-section {
-    position: relative;
-    margin: 0;
-    padding-left: 100px;
-    font-size: 50px;
-    padding-left: 125px;
-    font-size: 40px;
-    font-weight: 400;
-    font-family: 'Montserrat Subrayada', sans-serif;
-    text-shadow: 2px 2px #fff000;
-
-
-}
 
 /* introduction */
 
@@ -415,6 +419,18 @@ input {
     padding: 5px;
     border-style: none;
 }
+
+input:hover {
+    color: white;
+    background-color: #f4e0fc;
+    transition: all 0.2s;
+}
+
+textarea {
+    max-width: 400px;
+    max-height: 120px;
+}
+
 
 footer {
     padding: 10px;
